--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "ext-zip": "*",
+        "ext-zlib": "*",
         "barryvdh/laravel-dompdf": "^2.0",
         "doctrine/dbal": "^3.6",
         "fruitcake/laravel-cors": "^2.0.5",
@@ -17,6 +19,7 @@
         "laravel/tinker": "^2.7",
         "maatwebsite/excel": "^3.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
+        "spatie/laravel-medialibrary": "^10.11",
         "sunra/php-simple-html-dom-parser": "^1.5",
         "weidner/goutte": "^2.3"
     },
