--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
         "ext-zlib": "*",
         "barryvdh/laravel-dompdf": "^2.0",
         "doctrine/dbal": "^3.6",
-        "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.7",
         "intervention/image": "^2.7",
         "laravel/breeze": "*",
@@ -20,8 +19,7 @@
         "maatwebsite/excel": "^3.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-medialibrary": "^10.11",
-        "sunra/php-simple-html-dom-parser": "^1.5",
-        "weidner/goutte": "^2.3"
+        "sunra/php-simple-html-dom-parser": "^1.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
