--- a/.github/workflows/deploy-application.yaml
+++ b/.github/workflows/deploy-application.yaml
@@ -131,9 +131,10 @@ jobs:
         with:
           host: ${{ matrix.server.ip }}
           username: ${{ matrix.server.username }}
+          password: ${{ matrix.server.password }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ matrix.server.port }}
           source: ${{ github.sha }}.tar.gz
-          target: ${{ matrix.server.path }}/artifacts
+          target: ${{ matrix.server.path }}/artifacts // /var/www/html/artifacts
 
 
