--- a/.github/workflows/deploy-application.yaml
+++ b/.github/workflows/deploy-application.yaml
@@ -126,7 +126,7 @@ jobs:
           name: app-build
 
       - name: Upload
-        # scp-action để tải lên tệp triển khai lên máy chủ từ xa.
+        # scp-action để tải lên tệp triển khai lên máy chủ từ xa. (Chính là con máy chủ ta đã setup trên digital oceans)
         uses: appleboy/scp-action@master
         with:
           host: ${{ matrix.server.ip }}
