--- a/deployment-config.json
+++ b/deployment-config.json
@@ -7,6 +7,6 @@
       "port": "22",
       "beforeHooks": "",
       "afterHooks": "",
-      "path": "var/www/html"
+      "path": "/var/www/html"
     }
 ]
